// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RenderLinkAnnotation /> matches snapshot 1`] = `
"
<a
  href=\\"http://localhost/foo\\"
  target=\\"_blank\\"
  rel=\\"noopener noreferrer\\"
  class=\\"components-label components-label-with-hover badge border components-grid-annotation-link\\"
>
  <svg
    aria-hidden=\\"true\\"
    focusable=\\"false\\"
    data-prefix=\\"fas\\"
    data-icon=\\"up-right-from-square\\"
    class=\\"svg-inline--fa fa-up-right-from-square \\"
    role=\\"img\\"
    xmlns=\\"http://www.w3.org/2000/svg\\"
    viewbox=\\"0 0 512 512\\"
  >
    <path
      fill=\\"currentColor\\"
      d=\\"M384 320c-17.67 0-32 14.33-32 32v96H64V160h96c17.67 0 32-14.32 32-32s-14.33-32-32-32L64 96c-35.35 0-64 28.65-64 64V448c0 35.34 28.65 64 64 64h288c35.35 0 64-28.66 64-64v-96C416 334.3 401.7 320 384 320zM488 0H352c-12.94 0-24.62 7.797-29.56 19.75c-4.969 11.97-2.219 25.72 6.938 34.88L370.8 96L169.4 297.4c-12.5 12.5-12.5 32.75 0 45.25C175.6 348.9 183.8 352 192 352s16.38-3.125 22.62-9.375L416 141.3l41.38 41.38c9.156 9.141 22.88 11.84 34.88 6.938C504.2 184.6 512 172.9 512 160V24C512 10.74 501.3 0 488 0z\\"
    >
    </path>
  </svg>
  annotation name
</a>
"
`;

exports[`<RenderNonLinkAnnotation /> matches snapshot when visible=false 1`] = `
"
<div class=\\" tooltip-trigger\\">
  <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100 cursor-pointer\\">
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"angle-left\\"
      class=\\"svg-inline--fa fa-angle-left me-1\\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 256 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M192 448c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l137.4 137.4c12.5 12.5 12.5 32.75 0 45.25C208.4 444.9 200.2 448 192 448z\\"
      >
      </path>
    </svg>
    foo
  </div>
</div>
"
`;

exports[`<RenderNonLinkAnnotation /> matches snapshot when visible=true 1`] = `
"
<div class=\\" tooltip-trigger\\">
  <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100\\">
    <span class=\\"cursor-pointer\\">
      <svg
        aria-hidden=\\"true\\"
        focusable=\\"false\\"
        data-prefix=\\"fas\\"
        data-icon=\\"angle-right\\"
        class=\\"svg-inline--fa fa-angle-right me-1 text-muted\\"
        role=\\"img\\"
        xmlns=\\"http://www.w3.org/2000/svg\\"
        viewbox=\\"0 0 256 512\\"
      >
        <path
          fill=\\"currentColor\\"
          d=\\"M64 448c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L178.8 256L41.38 118.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25l-160 160C80.38 444.9 72.19 448 64 448z\\"
        >
        </path>
      </svg>
      <span class=\\"text-muted\\">
        foo:
      </span>
    </span>
    <span class=\\"Linkify\\">
      <span>
        some long text
      </span>
    </span>
  </div>
</div>
"
`;
